refactoring user model, added twitter bootstrap static, having fun with template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   <body>
     <div class="container">
 
+    <%= render "top_menu" %>
+
+
+
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
       <% end %>
