--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,13 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email, autofocus: true %>
   </div>
+
 
   <div class="field">
     <%= f.label :email_confirmation %><br />
-    <%= f.email_field :email_confirmation, autocomplete: "off" %>
+    <%= f.email_field :email_confirmation %>
   </div>
 
   <div class="field">
