--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,9 +1,9 @@
-<h2>Search for a skroutz product</h2>
+<h2>Search for a skroutz product by SKU</h2>
 
 <div class="search-form">
   <%= form_tag action: "preview", method: "post" do %>
-    <%= text_field_tag :q, params[:q], placeholder: "Search Product" %> 
-    <%= submit_tag "Search" %>
+    <%= text_field_tag :q, params[:q], placeholder: "Enter SKU" %> 
+    <%= submit_tag "Get Product" %>
   <% end %>
 </div>
 
