--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -18,8 +18,9 @@
             <ul class="nav navbar-nav pull-right">
               <% if user_signed_in? %>
                 <li>
-                <%= link_to('Search SKU',
-                'products/search') %>
+                <%= 
+                link_to('Search SKU', 
+                products_search_path) %>
                 <li>
                 <%= link_to('Edit registration', edit_user_registration_path) %>
                 </li>
