adds about page

--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -35,7 +35,11 @@
                 <%= link_to('Register', new_user_registration_path)  %>
                 </li>
               <% end %>
+              <li>
+              <%= link_to('About', about_path)  %>
+              </li>
             </ul>
+
            
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
