--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,8 +1,13 @@
-<h2>Search for a skroutz product by SKU</h2>
-
-<div class="search-form">
-  <%= form_tag ('preview'), :method => :get do %> 
-    <%= text_field_tag :sku, params[:sku], placeholder: "Enter SKU" %> 
-    <%= submit_tag "Get Product" %>
-  <% end %>
+<div class="text-center">
+<div class="jumbotron">
+	<%= form_tag ('preview'), :method => :get do %>
+	<div class="col-lg-6 col-md-offset-3 sku-search">
+	    <div class="input-group">
+	    	<%= text_field_tag :sku, params[:sku], placeholder: "Enter SKU", class: "form-control", id: 'sku-search' %>
+	    	<span class="input-group-btn"><%= submit_tag "Get Product", class: 'btn btn-default' %></span>
+		</div>
+	</div>
+	<br>
+	<% end %>
+</div>
 </div>
