--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,6 +26,7 @@
         </td>
         <td><%= sku.id %></td>
         <td><%= sku.name %></td>
+        <td><%= link_to 'Remove', list_removeproduct_path(:sku_id=>sku.id, :list_id=>@list.id), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -33,3 +34,4 @@
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
+<p id="notice"><%= notice %></p>
