Add list display option for the user

--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -1,4 +1,4 @@
- 
+
  <%= link_to image_tag("//c.scdn.gr/assets/schwartz/el/logo-el-large-28021127f2a44d590e5fcff61252b55f.png", class:"img-responsive center-block") , root_path %>
  <br />
  <div class="row">
@@ -18,25 +18,28 @@
             <ul class="nav navbar-nav pull-right">
               <% if user_signed_in? %>
                 <li>
-                <%= 
-                link_to('Search SKU', 
+                <%=
+                link_to('Search SKU',
                 products_search_path) %>
+                <li>
+                <%= link_to('My Lists', lists_path) %>
+                </li>
                 <li>
                 <%= link_to('Edit registration', edit_user_registration_path) %>
                 </li>
                 <li>
-                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
                 </li>
               <% else %>
                 <li>
-                <%= link_to('Login', new_user_session_path)  %>  
+                <%= link_to('Login', new_user_session_path)  %>
                 </li>
                 <li>
                 <%= link_to('Register', new_user_registration_path)  %>
                 </li>
               <% end %>
             </ul>
-           
+
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
