Add H2 header for Password change

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,7 @@
     <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
 
+  <h2>Password Change</h2>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
