--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -2,7 +2,7 @@
  <br />
  <div class="row">
     <div class="col-xs-12">
- <nav class="navbar navbar-default">
+ <nav class="navbar orange navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
