--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(list) do |f| %>
+<%= form_for(list) do |f|%>
   <% if list.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(list.errors.count, "error") %> prohibited this list from being saved:</h2>
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-group' %>
   </div>
 
   <div class="field">
     <%= f.label :active %>
-    <%= f.check_box :active %>
+    <%= f.check_box :active, class: 'form-group' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
