--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,7 @@
+<div class="col-md-6 col-md-offset-3">
 <h1>New List</h1>
 
-<%= render 'form', list: @list %>
-
-<%= link_to 'Back', lists_path %>
+<%= render 'form', list: @list, class: 'form-group' %>
+<br>
+<%= link_to 'Back', lists_path, class: 'btn btn-md btn-warning' %>
+</div>
