--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing List</h1>
 
 <%= render 'form', list: @list %>
-
-<%= link_to 'Show', @list %> |
-<%= link_to 'Back', lists_path %>
+<br>
+<%= link_to 'Show List', @list, class: 'btn btn-success' %>
+<%= link_to 'Back to Lists', lists_path, class: 'btn btn-warning' %>
