--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td class="name"><%= list.name %></td>
         <td class="status"><%=  list.active %></td>
-        <td class="actions"><%= link_to 'Show', list, class: 'btn btn-sm btn-primary' %></td>
-        <td class="actions"><%= link_to 'Edit', edit_list_path(list), class: 'btn btn-sm btn-warning' %></td>
-        <td class="actions"><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %></td>
+        <td class="actions"><%= link_to 'Show List', list, class: 'btn btn-sm btn-primary' %></td>
+        <td class="actions"><%= link_to 'Edit List', edit_list_path(list), class: 'btn btn-sm btn-warning' %></td>
+        <td class="actions"><%= link_to 'Destroy List', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
