--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,19 @@
 <h1>Welcome to Ruby Codin School Project</h1>
+<% @list.each do |l| %>
+<div class="bs-callout bs-callout-info col-xs-12 col-md-12 col-lg-12">
+	<div class="col-xs-8 col-md-8 col-lg-8">
+	  <p class="lead"><strong>List Name: </strong><%= l.name %></p>
+
+	  <p class="lead"><strong>Active: </strong><%= l.active %></p>
+
+		<p class="lead"><strong>Created by: </strong><%= User.find(l.user_id).name %></p>	
+
+		<p class="lead"><strong>Created on: </strong><%= l.created_at %></p>
+		</div>
+		
+		<div class="col-xs-4 col-md-4 col-lg-4">
+		<a class="btn btn-lg btn-product" href="lists/<%= l.id %>" style="position:absolute;bottom: -200px">Show List</a>
+		</div>
+
+</div>
+<% end %>
