--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,34 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html, body {
+    height: 100%;
+}
+
+body {
+	background: url(../assets/summer-bg.jpg) top center no-repeat; 
+	background-size: cover;
+}
+
+.main {
+	background: #fff;
+	margin: 5px ;
+	padding: 15px;
+	border-radius: 5px;
+	-webkit-box-shadow: 10px 10px 135px -20px rgba(224,224,224,1);
+  -moz-box-shadow: 10px 10px 135px -20px rgba(224,224,224,1);
+	box-shadow: 10px 10px 135px -20px rgba(224,224,224,1);
+}
+
+.container {
+	background: rgba(255,255 ,255,  0.93);
+	height: 100%;
+}
+
+.navbar .container-fluid, .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	background: #fff;
+}
+ 
 .input-group-btn input {
   color: white !important;
 	background: #e8760a !important;
