--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,11 @@
       <% if alert %>
         <p class="alert alert-danger"><%= alert %></p>
       <% end %>
-
-    <%= yield %>
-
+      <div class="row main">
+        
+        <%= yield %>
+        
+      </div>
     </div>
   </body>
 </html>
