--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<p id="notice"></p>
 <div class="bs-callout bs-callout-info">
   <p class="lead">
     <strong>List Name:</strong>
@@ -39,12 +38,15 @@
         <td><%= sku.id %></td>
         <td><%= sku.name %></td>
         <td><%= link_to 'Show', products_preview_path(sku: sku.id), class: 'btn btn-sm btn-primary' %></td>
-        <td><%= link_to 'Remove', list_removeproduct_path(:sku_id=>sku.id, :list_id=>@list.id), method: :put, data: { confirm: 'Really delete this product from your list?' }, class: 'btn btn-sm btn-danger' %></td>
+        <% if @list.user_id == current_user.id %>
+          <td><%= link_to 'Remove', list_removeproduct_path(:sku_id=>sku.id, :list_id=>@list.id, :user_id => @list.user_id), method: :put, data: { confirm: 'Really delete this product from your list?' }, class: 'btn btn-sm btn-danger' %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'Edit List', edit_list_path(@list), class: 'btn btn-primary' %>
+<% if @list.user_id == current_user.id %>
+  <%= link_to 'Edit List', edit_list_path(@list), class: 'btn btn-primary' %>
+<% end %>
 <%= link_to 'Back to Lists', lists_path, class: 'btn btn-warning' %>
-<p id="notice"><%= notice %></p>
