implement pagination for lists

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -25,6 +25,10 @@
   </tbody>
 </table>
 
+<hr />
+<%= paginate @lists %>
+<%= page_entries_info @lists %>
+<hr />
 <br>
 
 <%= link_to 'New List', new_list_path %>
