--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -8,11 +8,11 @@
     <%= link_to('Edit registration', edit_user_registration_path, { :class => 'btn' } ) %>
     </li>
     <li>
-    <%= link_to('Logout', destroy_user_session_path, { :class => 'btn btn-info' , :method => :delete }) %>
+    <%= link_to('Logout', destroy_user_session_path, { :class => 'btn btn-default' , :method => :delete }) %>
     </li>
   <% else %>
     <li>
-    <%= link_to('Login', new_user_session_path, { :class => 'btn' })  %>
+    <%= link_to('Login', new_user_session_path, { :class => 'btn btn-default' })  %>
     </li>
     <li>
     <%= link_to('Register', new_user_registration_path, { :class => 'btn btn-info' })  %>
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">SkroutzApp: <b>Fav Magic</b></a>
+            <a class="navbar-brand" href="<%= root_path %>">SkroutzApp: <b>Fav Magic</b></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
