--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"></p>
 <div class="bs-callout bs-callout-info">
   <p class="lead">
     <strong>List Name:</strong>
@@ -49,4 +48,5 @@
 <% if @list.user_id == current_user.id %>
   <%= link_to 'Edit List', edit_list_path(@list), class: 'btn btn-primary' %>
 <% end %>
-<%= link_to 'Back to Lists', lists_path, class: 'btn btn-warning' %>
+<%= link_to 'Back to Your Lists', lists_path, class: 'btn btn-warning' %>
+<%= link_to 'Back to All Lists', root_path, class: 'btn btn-info' %>
