Fix money format price in List show

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,7 +11,7 @@
 
   <p class="lead">
     <strong>Total price:</strong>
-    <%= @total_price %>€
+    <%= number_with_precision(@total_price, precision: 2) %>€
   </p>
 </div>
 
