--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,10 @@
 <div class="bs-callout bs-callout-info">
-  <p class="lead">
-    <strong>List Name:</strong>
-    <%= @list.name %>
-  </p>
-
-  <p class="lead">
-    <strong>Active:</strong>
-    <%= @list.active %>
-  </p>
-
-  <p class="lead">
-    <strong>Total price:</strong>
-    <%= number_with_precision(@total_price, precision: 2) %>€
-  </p>
+  <ul class="list-inline lists">
+    <li><p class="lead"><span class="glyphicon glyphicon glyphicon-user"></span> <%= User.find(List.find(@list.id).user_id).name %></p></li>
+    <li><p class="lead"><span class="glyphicon glyphicon glyphicon-th-list"></span> <%= @list.name %></p></li>
+    <li><p class="lead"><span class="glyphicon glyphicon glyphicon-globe"></span> <%= @list.active %></p></li>
+    <li><p class="lead"><span class="glyphicon glyphicon glyphicon-shopping-cart"></span> <%= number_with_precision(@total_price, precision: 2) %>€</p></li>
+  </ul>
 </div>
 
 <div class="text-center">
@@ -44,9 +36,10 @@
     <% end %>
   </tbody>
 </table>
-
+<div class="btn-group">
 <% if @list.user_id == current_user.id %>
   <%= link_to 'Edit List', edit_list_path(@list), class: 'btn btn-primary' %>
 <% end %>
 <%= link_to 'Back to Your Lists', lists_path, class: 'btn btn-warning' %>
 <%= link_to 'Back to All Lists', root_path, class: 'btn btn-info' %>
+</div>
