--- a/app/views/product_lists/increase_quantity.js.erb
+++ b/app/views/product_lists/increase_quantity.js.erb
@@ -1,1 +1,10 @@
 $("#quantity-product-list-id-<%= @product_list.id %>").text(<%= @product_list.quantity %>)
+
+$("#product-total-price-id-<%= @product_list.id %>").text(<%= sprintf("%.2f", @product_price * @product_list.quantity)%>);
+
+$("#inc-product-list-id-<%= @product_list.id %>").attr("disabled", <%= @product_list.quantity > 9 %>);
+$("#dec-product-list-id-<%= @product_list.id %>").attr("disabled", <%= @product_list.quantity < 2 %>);
+
+$('#final-price').text(function(i, originText){
+  return (parseFloat(originText) + <%= @product_price %>).toFixed(2);
+});
