Implement pagination for home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,5 +25,12 @@
 		</div>
 	</div>
 </div>
-
 <% end %>
+
+</div>
+<div class="row">
+<hr />
+<%= paginate @list %>
+<%= page_entries_info @list %>
+<hr />
+</div>
