--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,9 +28,10 @@
 <% end %>
 
 </div>
-<div class="row">
-<hr />
-<%= paginate @list %>
-<%= page_entries_info @list %>
-<hr />
+<div class="row text-center">
+  <hr />
+  <%= paginate @list %>
+  <br>
+  <%= page_entries_info @list %>
+  <hr />
 </div>
