--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,12 +14,9 @@
 				</p>
 				<div class="row">
 					<div class="col-xs-12 col-md-6">
-						<p class="lead"><% if l.active.to_s == "true" %>
-							<span class="glyphicon glyphicon-globe"></span>
-						<% end %></p>
 					</div>
 				<div class="col-xs-12 col-md-6">
-					<a class="btn btn-product" href="lists/<%= l.id %>">Show List</a>
+					<a class="btn btn-product pull-right" href="lists/<%= l.id %>">Show List</a>
 				</div>
 			</div>
 		</div>
