--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,7 @@
 				</p>
 				<div class="row">
 					<div class="col-xs-12 col-md-6">
+					<span class="glyphicon glyphicon-star"></span> <%= 	rating_for l, "name", disable_after_rate: true %>
 					</div>
 				<div class="col-xs-12 col-md-6">
 					<a class="btn btn-product pull-right" href="lists/<%= l.id %>">Show List</a>
