Fix final price js show

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -73,7 +73,7 @@
           </td>
           <td>
             €
-            <span id="product-total-price-id-<%= sq[:product_list].id %>" class="name">
+            <span id="product-total-price-id-<%= sq[:product_list].id %>" class="product-total-price">
               <%= sum_price(sq) %>
             </span>
           </td>
